fix: fix home page alignment

--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,3 @@
-.btr-hide-ads .content {
-	max-width: 970px;
-}
-
 /* Friend stuff */
 
 #people-list-container .people-list-container {
